[package]
name = "echopod"
version = "0.1"
edition = "2025"

description = "A server to sync podcasts with, utilizing the gpodder API."
license = "MIT License"
homepage = "https://github.com/tsyqe/echopod"
repository = "https://github.com/tsyqe/echopod"

[dependencies]

# runtime/tools
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.3"
serde_json = "1.0"
time = { version = "0.3.35", features = ["serde", "formatting", "parsing", "macros", "local-offset", "std"] }
clap = { version = "4.4", features = ["derive"] }
base64_light = "0.1"
sha256 = "1.4"
uuid = { version = "1.4", features = ["v4"] }

# logging
log = "0.4"
pretty_env_logger = "0.5"

# http
cookie = "0.18"
warp = "0.3"

# sql
sqlx = { version = "0.6", features = ["sqlite", "time", "offline"], optional = true }
#sqlx-cli

[features]
default = ["rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls", "warp/tokio-rustls"]

backend-sql = ["dep:sqlx"]
